--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="hero">
-    <div class="overlay">
-      <h1>Empowering Digital Operations</h1>
-      <p>Your Partner in Scalable, Cost-Effective BPO Solutions</p>
-      <a href="#contact" class="btn-primary">Talk to Us</a>
-    </div>
-  </header>
+  <header class="topbar">
+  <div class="container">
+    <img src="logo.png" alt="Axentra Logo" class="logo">
+  </div>
+</header>
+
+<header class="hero">
+  <div class="overlay">
+    <h1>Empowering Digital Operations</h1>
+    <p>Your Partner in Scalable, Cost-Effective BPO Solutions</p>
+    <a href="#contact" class="btn-primary">Talk to Us</a>
+  </div>
+</header>
 
   <section class="about">
     <h2>Who We Are</h2>
