--- a/index.html
+++ b/index.html
@@ -1,81 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Axentra</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Axentra - Empowering Digital Operations</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="hero-section">
-        <div class="container">
-            <img src="logo.png" alt="Axentra Logo" class="logo" />
-            <h1>Empowering Businesses Through Scalable BPO Solutions</h1>
-            <p>Your partner in customer support, operations, and growth.</p>
-            <a href="#contact" class="cta-btn">Let’s Talk</a>
-        </div>
-    </header>
 
-    <section class="about">
-        <div class="container">
-            <h2>Who We Are</h2>
-            <p>Axentra is a people-first BPO committed to driving efficiency and innovation for our clients through tailored outsourcing solutions.</p>
-        </div>
-    </section>
+  <header class="topbar">
+    <div class="topbar-container">
+      <img src="logo.png" alt="Axentra Logo" class="logo" />
+    </div>
+  </header>
 
-    <section class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="grid">
-                <div class="card">Customer Support</div>
-                <div class="card">Back Office Services</div>
-                <div class="card">Lead Generation</div>
-                <div class="card">Data Entry & Processing</div>
-                <div class="card">Tech Support</div>
-                <div class="card">Virtual Assistance</div>
-            </div>
-        </div>
-    </section>
+  <header class="hero-section">
+    <div class="container">
+      <h1>Empowering Businesses Through Scalable BPO Solutions</h1>
+      <p>Your partner in customer support, operations, and growth.</p>
+      <a href="#contact" class="cta-btn">Let’s Talk</a>
+    </div>
+  </header>
 
-    <section class="industries">
-        <div class="container">
-            <h2>Industries We Serve</h2>
-            <div class="grid">
-                <div class="card">E-commerce</div>
-                <div class="card">Healthcare</div>
-                <div class="card">BFSI</div>
-                <div class="card">Travel & Hospitality</div>
-                <div class="card">EdTech</div>
-                <div class="card">Real Estate</div>
-            </div>
-        </div>
-    </section>
+  <section class="about">
+    <div class="container">
+      <h2>Who We Are</h2>
+      <p>Axentra is a digital-first BPO company offering efficient and scalable services to modern businesses.</p>
+    </div>
+  </section>
 
-    <section class="why-us">
-        <div class="container">
-            <h2>Why Choose Us</h2>
-            <ul>
-                <li>24x7 Support</li>
-                <li>Cost Efficiency</li>
-                <li>Quality Assurance</li>
-                <li>Dedicated Account Managers</li>
-                <li>Fast Onboarding</li>
-            </ul>
-        </div>
-    </section>
+  <section class="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="grid">
+        <div class="card">Customer Support</div>
+        <div class="card">Data Entry & Processing</div>
+        <div class="card">Tech Support</div>
+        <div class="card">Lead Generation</div>
+      </div>
+    </div>
+  </section>
 
-    <section class="contact" id="contact">
-        <div class="container">
-            <h2>Let’s Connect</h2>
-            <p>Email: nithin.axentra@gmail.com</p>
-            <a href="https://wa.me/919113513387" class="whatsapp-btn" target="_blank">📱 Chat on WhatsApp</a>
-        </div>
-    </section>
+  <section class="industries">
+    <div class="container">
+      <h2>Industries We Serve</h2>
+      <div class="grid">
+        <div class="card">E-commerce</div>
+        <div class="card">Healthcare</div>
+        <div class="card">BFSI</div>
+        <div class="card">Real Estate</div>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Axentra. All rights reserved.</p>
-        </div>
-    </footer>
+  <section class="contact" id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Email: nithin.axentra@gmail.com</p>
+      <a href="https://wa.me/919113513387" class="btn-whatsapp">Chat on WhatsApp</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Axentra. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
