--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   </header>
 
   <header class="hero-section">
-    <div class="container">
-      <h1>Empowering Businesses Through Scalable BPO Solutions</h1>
-      <p>Your partner in customer support, operations, and growth.</p>
-      <a href="#contact" class="cta-btn">Let’s Talk</a>
-    </div>
-  </header>
+  <video autoplay muted loop playsinline class="bg-video">
+    <source src="your-video.mp4" type="video/mp4" />
+  </video>
+  <div class="container hero-content">
+    <h1>Empowering Businesses Through Scalable BPO Solutions</h1>
+    <p>Your partner in customer support, operations, and growth.</p>
+    <a href="#contact" class="cta-btn">Let’s Talk</a>
+  </div>
+</header>
 
   <section class="about">
     <div class="container">
