--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   </header>
 
   <header class="hero-section">
-  <video autoplay muted loop playsinline class="bg-video">
-    <source src="your-video.mp4" type="video/mp4" />
-  </video>
-  <div class="container hero-content">
-    <h1>Empowering Businesses Through Scalable BPO Solutions</h1>
-    <p>Your partner in customer support, operations, and growth.</p>
-    <a href="#contact" class="cta-btn">Let’s Talk</a>
-  </div>
-</header>
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="your-video.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <div class="container hero-content">
+      <h1>Empowering Businesses Through Scalable BPO Solutions</h1>
+      <p>Your partner in customer support, operations, and growth.</p>
+      <a href="#contact" class="cta-btn">Let’s Talk</a>
+    </div>
+  </header>
 
   <section class="about">
     <div class="container">
@@ -59,7 +60,7 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2>Contact Us</h2>
-      <p>Email: axentra.cx@gmail.com</p>
+      <p>Email: nithin.axentra@gmail.com</p>
       <a href="https://wa.me/919113513387" class="btn-whatsapp">Chat on WhatsApp</a>
     </div>
   </section>
