--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
       <h2>Our Services</h2>
       <div class="grid">
         <div class="card">Customer Support</div>
-        <div class="card">Data Entry & Processing</div>
         <div class="card">Tech Support</div>
+        <div class="card">Banking Operations</div>
+        <div class="card">Data Entry & Processing</div>
         <div class="card">Lead Generation</div>
+        <div class="card">KYC Operations</div>
       </div>
     </div>
   </section>
@@ -53,6 +55,8 @@
         <div class="card">Healthcare</div>
         <div class="card">BFSI</div>
         <div class="card">Real Estate</div>
+        <div class="card">Telecom</div>
+        <div class="card">Insurance</div>
       </div>
     </div>
   </section>
