--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="about">
     <div class="container">
       <h2>Who We Are</h2>
-      <p>Axentra is a digital-first BPO company offering efficient and scalable services to modern businesses.</p>
+      <p>Axentra is a digital-first BPO company built for the modern business era. We empower startups, SMEs, and enterprises to offload operational complexity and focus on growth. With a tech-enabled workforce, 24/7 agility, and process-driven excellence, we deliver scalable, cost-efficient, and high-impact solutions across customer support, data operations, and lead generation.</p>
     </div>
   </section>
 
