--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section class="contact" id="contact">
     <div class="container">
       <h2>Contact Us</h2>
-      <p>Email: nithin.axentra@gmail.com</p>
+      <p>Email: axentra.cx@gmail.com</p>
       <a href="https://wa.me/919113513387" class="btn-whatsapp">Chat on WhatsApp</a>
     </div>
   </section>
