--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
   </section>
 
   <section class="services">
-    <div class="container">
-      <h2>Our Services</h2>
-      <div class="grid">
-        <div class="card">Customer Support</div>
-        <div class="card">Tech Support</div>
-        <div class="card">Banking Operations</div>
-        <div class="card">Data Entry & Processing</div>
-        <div class="card">Lead Generation</div>
-        <div class="card">KYC Operations</div>
-      </div>
+  <div class="container">
+    <h2>Our Services</h2>
+    <div class="grid">
+      <div class="grid-item">Customer Support</div>
+      <div class="grid-item">Tech Support</div>
+      <div class="grid-item">Banking Operations</div>
+      <div class="grid-item">Data Entry & Processing</div>
+      <div class="grid-item">Lead Generation</div>
+      <div class="grid-item">KYC Operations</div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="industries">
-    <div class="container">
-      <h2>Industries We Serve</h2>
-      <div class="grid">
-        <div class="card">E-commerce</div>
-        <div class="card">Healthcare</div>
-        <div class="card">BFSI</div>
-        <div class="card">Real Estate</div>
-        <div class="card">Telecom</div>
-        <div class="card">Insurance</div>
-      </div>
+<section class="industries">
+  <div class="container">
+    <h2>Industries We Serve</h2>
+    <div class="grid">
+      <div class="grid-item">E-commerce</div>
+      <div class="grid-item">Healthcare</div>
+      <div class="grid-item">BFSI</div>
+      <div class="grid-item">Real Estate</div>
+      <div class="grid-item">Telecom</div>
+      <div class="grid-item">Insurance</div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="contact" id="contact">
     <div class="container">
