--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Axentra - Empowering Digital Operations</title>
-  <link rel="stylesheet" href="style.css" />
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
 
+<body>
   <header class="topbar">
     <div class="topbar-container">
-      <img src="logo.png" alt="Axentra Logo" class="logo" />
+      <img src="logo.png" alt="Axentra Logo" class="logo"/>
     </div>
   </header>
 
   <header class="hero-section">
     <video autoplay muted loop playsinline class="bg-video">
-      <source src="your-video.mp4" type="video/mp4" />
+      <source src="your-video.mp4" type="video/mp4"/>
       Your browser does not support the video tag.
     </video>
     <div class="container hero-content">
@@ -34,32 +37,50 @@
   </section>
 
   <section class="services">
-  <div class="container">
-    <h2>Our Services</h2>
-    <div class="grid">
-      <div class="grid-item">Customer Support</div>
-      <div class="grid-item">Tech Support</div>
-      <div class="grid-item">Banking Operations</div>
-      <div class="grid-item">Data Entry & Processing</div>
-      <div class="grid-item">Lead Generation</div>
-      <div class="grid-item">KYC Operations</div>
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="grid">
+        <div class="grid-item">
+          <i class="fas fa-headset" aria-hidden="true"></i>
+          <span>Customer Support</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-tools" aria-hidden="true"></i>
+          <span>Tech Support</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-university" aria-hidden="true"></i>
+          <span>Banking Operations</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-keyboard" aria-hidden="true"></i>
+          <span>Data Entry & Processing</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-magnet" aria-hidden="true"></i>
+          <span>Lead Generation</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-id-card" aria-hidden="true"></i>
+          <span>KYC Operations</span>
+        </div>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="industries">
-  <div class="container">
-    <h2>Industries We Serve</h2>
-    <div class="grid">
-      <div class="grid-item">E-commerce</div>
-      <div class="grid-item">Healthcare</div>
-      <div class="grid-item">BFSI</div>
-      <div class="grid-item">Real Estate</div>
-      <div class="grid-item">Telecom</div>
-      <div class="grid-item">Insurance</div>
+  <section class="industries">
+    <div class="container">
+      <h2>Industries We Serve</h2>
+      <div class="grid">
+        <div class="grid-item">E-commerce</div>
+        <div class="grid-item">Healthcare</div>
+        <div class="grid-item">BFSI</div>
+        <div class="grid-item">Real Estate</div>
+        <div class="grid-item">Telecom</div>
+        <div class="grid-item">Insurance</div>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <section class="contact" id="contact">
     <div class="container">
@@ -72,6 +93,6 @@
   <footer>
     <p>&copy; 2025 Axentra. All rights reserved.</p>
   </footer>
-
 </body>
+
 </html>
