--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </div>
   </header>
 
-  <!-- Main Navigation with Dropdowns -->
   <nav class="main-nav sticky-nav">
     <div class="container">
       <ul class="nav-menu">
@@ -98,27 +97,27 @@
       <h2>Our Services</h2>
       <div class="grid">
         <div class="grid-item">
-          <i class="fas fa-headset" aria-hidden="true"></i>
+          <i class="fas fa-headset"></i>
           <span>Customer Support</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-tools" aria-hidden="true"></i>
+          <i class="fas fa-tools"></i>
           <span>Tech Support</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-university" aria-hidden="true"></i>
+          <i class="fas fa-university"></i>
           <span>Banking Operations</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-keyboard" aria-hidden="true"></i>
+          <i class="fas fa-keyboard"></i>
           <span>Data Entry & Processing</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-magnet" aria-hidden="true"></i>
+          <i class="fas fa-magnet"></i>
           <span>Lead Generation</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-id-card" aria-hidden="true"></i>
+          <i class="fas fa-id-card"></i>
           <span>KYC Operations</span>
         </div>
       </div>
@@ -129,12 +128,30 @@
     <div class="container">
       <h2>Industries We Serve</h2>
       <div class="grid">
-        <div class="grid-item">E-commerce</div>
-        <div class="grid-item">Healthcare</div>
-        <div class="grid-item">BFSI</div>
-        <div class="grid-item">Real Estate</div>
-        <div class="grid-item">Telecom</div>
-        <div class="grid-item">Insurance</div>
+        <div class="grid-item">
+          <i class="fas fa-shopping-cart"></i>
+          <span>E-commerce</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-heartbeat"></i>
+          <span>Healthcare</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-university"></i>
+          <span>BFSI</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-building"></i>
+          <span>Real Estate</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-wifi"></i>
+          <span>Telecom</span>
+        </div>
+        <div class="grid-item">
+          <i class="fas fa-shield-alt"></i>
+          <span>Insurance</span>
+        </div>
       </div>
     </div>
   </section>
@@ -158,7 +175,7 @@
     navToggle.addEventListener('click', () => {
       navMenu.classList.toggle('active');
     });
-    // Toggle mobile dropdowns
+
     document.querySelectorAll('.dropdown > a').forEach(link => {
       link.addEventListener('click', (e) => {
         if (window.innerWidth < 992) {
