--- a/index.html
+++ b/index.html
@@ -4,12 +4,406 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Axentra - Empowering Digital Operations</title>
+
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <!-- Main stylesheet -->
-  <link rel="stylesheet" href="style.css" />
-</head>
 
+  <!-- EmailJS SDK -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
+  <!-- Embedded CSS -->
+  <style>
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fefdfe;
+      color: #1B1B1B;
+      line-height: 1.5;
+    }
+    a { text-decoration: none; }
+
+    .topbar {
+      background-color: #fefdfe;
+      padding: 1rem 2rem;
+    }
+    .topbar-container {
+      display: flex;
+      align-items: center;
+    }
+    .logo {
+      height: 60px;
+      width: auto;
+    }
+
+    .main-nav {
+      background: white;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+      width: 100%;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .main-nav .container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      max-width: 1300px;
+      margin: 0 auto;
+      padding: 0 24px;
+    }
+    .nav-menu {
+      display: flex;
+      list-style: none;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+    .nav-menu li {
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+    }
+    .nav-menu a {
+      color: #1B1B1B;
+      font-weight: 500;
+      padding: 24px 16px;
+      display: flex;
+      align-items: center;
+      transition: color 0.2s ease;
+      font-size: 0.96rem;
+    }
+    .nav-menu a i {
+      margin-left: 6px;
+      font-size: 0.8rem;
+      color: #7500C0;
+    }
+    .dropdown-content {
+      position: absolute;
+      top: 72px;
+      left: 0;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.12);
+      min-width: 220px;
+      padding: 8px 0;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease, transform 0.2s ease;
+      transform: translateY(10px);
+      z-index: 100;
+      display: flex;
+      flex-direction: column;
+    }
+    .dropdown-content a {
+      padding: 12px 20px;
+      color: #1B1B1B;
+      font-size: 0.9rem;
+    }
+    .dropdown-content li:hover a {
+      color: #7500C0;
+    }
+    .dropdown:hover .dropdown-content {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateY(0);
+    }
+    .nav-toggle {
+      background: none;
+      border: none;
+      color: #7500C0;
+      font-size: 1.5rem;
+      cursor: pointer;
+      display: none;
+    }
+
+    .hero-section {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 0;
+      overflow: hidden;
+      color: white;
+      min-height: 60vh;
+    }
+    .bg-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+      pointer-events: none;
+    }
+    .hero-section::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to right, rgba(70,0,115,0.7), rgba(161,0,255,0.5));
+      z-index: 0;
+      pointer-events: none;
+    }
+    .hero-content {
+      position: relative;
+      z-index: 1;
+      max-width: 800px;
+      padding: 2rem;
+    }
+    .cta-btn {
+      background: #FFFFFF;
+      color: #A100FF;
+      padding: 12px 24px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 30px;
+      transition: background 0.3s ease;
+      display: inline-block;
+      margin-top: 16px;
+    }
+    .cta-btn:hover {
+      background: #F0F0F0;
+    }
+
+    section {
+      padding: 64px 20px;
+      text-align: center;
+      margin-top: 0;
+    }
+    section:first-of-type {
+      padding-top: 0;
+    }
+
+    .grid {
+      display: grid;
+      gap: 24px;
+      margin-top: 32px;
+      justify-items: center;
+    }
+    @media (min-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+    @media (max-width: 767px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+    }
+    .grid-item {
+      background-color: #fefefe;
+      border: 1px solid #e0e0e0;
+      border-radius: 16px;
+      padding: 24px 20px;
+      text-align: center;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.06);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 12px;
+      min-height: 80px;
+    }
+    .grid-item:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 16px rgba(117, 0, 192, 0.1);
+    }
+    .grid-item i {
+      color: #7500C0;
+      font-size: 1.6rem;
+      min-width: 36px;
+      text-align: center;
+    }
+    .grid-item span {
+      font-weight: 500;
+      color: #1B1B1B;
+      text-align: left;
+    }
+
+    .contact {
+      position: relative;
+    }
+    .btn-whatsapp {
+      display: inline-block;
+      margin-top: 16px;
+      background: #25D366;
+      color: white;
+      padding: 10px 24px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .btn-whatsapp:hover {
+      background: #128C7E;
+    }
+
+    footer {
+      padding: 30px;
+      background: #1B1B1B;
+      color: white;
+      text-align: center;
+    }
+
+    /* Floating contact */
+    .floating-contact {
+      position: fixed;
+      bottom: 24px;
+      left: 24px;
+      z-index: 2000;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .contact-btn {
+      background: #7500C0;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 56px;
+      height: 56px;
+      font-size: 1.3rem;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 6px 24px rgba(117,0,192,0.25);
+      position: relative;
+    }
+    .contact-popup {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      bottom: 70px;
+      left: 0;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+      padding: 14px;
+      gap: 10px;
+      min-width: 170px;
+    }
+    .contact-option {
+      background: none;
+      border: none;
+      color: #1B1B1B;
+      font-size: 0.95rem;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+      padding: 8px 10px;
+      border-radius: 8px;
+      transition: background .2s ease;
+    }
+    .contact-option:hover {
+      background: #f5f5f5;
+    }
+    .contact-option i {
+      color: #7500C0;
+      min-width: 18px;
+    }
+
+    .email-form-modal {
+      display: none;
+      position: fixed;
+      z-index: 3000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.45);
+      padding: 20px;
+    }
+    .email-form-content {
+      background: #fff;
+      padding: 24px;
+      border-radius: 16px;
+      max-width: 420px;
+      margin: 80px auto;
+      position: relative;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.2);
+    }
+    .email-form-content h3 {
+      margin-top: 0;
+      font-size: 1.25rem;
+    }
+    .email-form-content input,
+    .email-form-content textarea {
+      width: 100%;
+      padding: 10px 12px;
+      margin-top: 10px;
+      border: 1px solid #d0d0d0;
+      border-radius: 8px;
+      font-size: 0.95rem;
+      resize: vertical;
+    }
+    .email-form-content button {
+      background: #7500C0;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      margin-top: 14px;
+      border-radius: 30px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+    .close-modal {
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      font-size: 1.3rem;
+      cursor: pointer;
+      color: #555;
+    }
+    #form-status {
+      margin-top: 10px;
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 992px) {
+      .nav-toggle { display: block; }
+      .nav-menu {
+        position: fixed;
+        flex-direction: column;
+        background: white;
+        top: 88px;
+        left: 0;
+        width: 100%;
+        height: calc(100vh - 88px);
+        padding: 24px 32px;
+        box-shadow: 0 -2px 16px rgba(0, 0, 0, 0.08);
+        transform: translateX(-100%);
+        transition: transform 0.3s ease;
+        z-index: 999;
+        overflow-y: auto;
+        gap: 0;
+      }
+      .nav-menu.active { transform: translateX(0); }
+      .nav-menu li { width: 100%; border-top: 1px solid #eaeaea; }
+      .nav-menu a { padding: 16px 0; }
+      .dropdown-content {
+        position: static;
+        opacity: 1;
+        pointer-events: all;
+        box-shadow: none;
+        padding: 0 0 0 16px;
+        display: none;
+        border-radius: 0;
+        margin: 8px 0;
+        border-left: 2px solid #eaeaea;
+      }
+      .dropdown-content.active { display: flex; }
+      .nav-menu a i { display: none; }
+    }
+  </style>
+</head>
 <body>
   <header class="topbar">
     <div class="topbar-container">
@@ -97,27 +491,27 @@
       <h2>Our Services</h2>
       <div class="grid">
         <div class="grid-item">
-          <i class="fas fa-headset"></i>
+          <i class="fas fa-headset" aria-hidden="true"></i>
           <span>Customer Support</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-tools"></i>
+          <i class="fas fa-tools" aria-hidden="true"></i>
           <span>Tech Support</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-university"></i>
+          <i class="fas fa-university" aria-hidden="true"></i>
           <span>Banking Operations</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-keyboard"></i>
+          <i class="fas fa-keyboard" aria-hidden="true"></i>
           <span>Data Entry & Processing</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-magnet"></i>
+          <i class="fas fa-magnet" aria-hidden="true"></i>
           <span>Lead Generation</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-id-card"></i>
+          <i class="fas fa-id-card" aria-hidden="true"></i>
           <span>KYC Operations</span>
         </div>
       </div>
@@ -129,27 +523,27 @@
       <h2>Industries We Serve</h2>
       <div class="grid">
         <div class="grid-item">
-          <i class="fas fa-shopping-cart"></i>
+          <i class="fas fa-shopping-cart" aria-hidden="true"></i>
           <span>E-commerce</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-heartbeat"></i>
+          <i class="fas fa-heartbeat" aria-hidden="true"></i>
           <span>Healthcare</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-university"></i>
+          <i class="fas fa-university" aria-hidden="true"></i>
           <span>BFSI</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-building"></i>
+          <i class="fas fa-building" aria-hidden="true"></i>
           <span>Real Estate</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-wifi"></i>
+          <i class="fas fa-wifi" aria-hidden="true"></i>
           <span>Telecom</span>
         </div>
         <div class="grid-item">
-          <i class="fas fa-shield-alt"></i>
+          <i class="fas fa-shield-alt" aria-hidden="true"></i>
           <span>Insurance</span>
         </div>
       </div>
@@ -160,7 +554,7 @@
     <div class="container">
       <h2>Contact Us</h2>
       <p>Email: axentra.cx@gmail.com</p>
-      <a href="https://wa.me/919113513387" class="btn-whatsapp">Chat on WhatsApp</a>
+      <a href="https://wa.me/919113513387" class="btn-whatsapp" target="_blank">Chat on WhatsApp</a>
     </div>
   </section>
 
@@ -168,14 +562,110 @@
     <p>&copy; 2025 Axentra. All rights reserved.</p>
   </footer>
 
-  <!-- JavaScript for mobile navigation and dropdowns -->
+  <!-- Floating Contact Widget -->
+  <div class="floating-contact">
+    <button class="contact-btn" id="open-contact" aria-label="Contact us">
+      <i class="fas fa-comments"></i>
+    </button>
+    <div class="contact-popup" id="contact-popup">
+      <button class="contact-option" id="open-form">
+        <i class="fas fa-paper-plane"></i> Write an Email
+      </button>
+      <a href="https://wa.me/919113513387" target="_blank" class="contact-option">
+        <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
+    </div>
+  </div>
+
+  <!-- Email Form Modal -->
+  <div class="email-form-modal" id="email-modal">
+    <div class="email-form-content">
+      <span class="close-modal" id="close-modal">&times;</span>
+      <h3>Send us a message</h3>
+      <form id="contactForm">
+        <input type="text" name="from_name" placeholder="Your Name" required />
+        <input type="tel" name="from_phone" placeholder="Phone Number" required />
+        <textarea name="message" placeholder="Your Query" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+      <div id="form-status"></div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
   <script>
+    // Initialize EmailJS with your actual user/public key
+    (function(){
+      emailjs.init("yzevaxhNLSHzs1nYz");
+    })();
+
+    // DOM elements
+    const openBtn = document.getElementById('open-contact');
+    const popup = document.getElementById('contact-popup');
+    const emailBtn = document.getElementById('open-form');
+    const emailModal = document.getElementById('email-modal');
+    const closeModal = document.getElementById('close-modal');
+    const form = document.getElementById('contactForm');
+    const statusDiv = document.getElementById('form-status');
     const navToggle = document.getElementById('nav-toggle');
     const navMenu = document.querySelector('.nav-menu');
-    navToggle.addEventListener('click', () => {
-      navMenu.classList.toggle('active');
+
+    // Mobile nav toggle
+    if (navToggle) {
+      navToggle.addEventListener('click', () => {
+        navMenu.classList.toggle('active');
+      });
+    }
+
+    // Toggle contact popup
+    openBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      popup.style.display = popup.style.display === 'flex' ? 'none' : 'flex';
     });
 
+    // Open email modal
+    emailBtn.addEventListener('click', () => {
+      emailModal.style.display = 'block';
+      popup.style.display = 'none';
+      statusDiv.textContent = '';
+    });
+
+    // Close modal
+    closeModal.addEventListener('click', () => {
+      emailModal.style.display = 'none';
+    });
+
+    // Click outside hides popup
+    document.addEventListener('click', (e) => {
+      if (!popup.contains(e.target) && e.target !== openBtn) {
+        popup.style.display = 'none';
+      }
+    });
+
+    // Form submission through EmailJS
+    form.addEventListener('submit', function (e) {
+      e.preventDefault();
+      statusDiv.style.color = '#333';
+      statusDiv.textContent = 'Sending...';
+
+      emailjs.send("service_zxu1ddf", "template_0r9mzoh", {
+        from_name: this.from_name.value,
+        from_phone: this.from_phone.value,
+        message: this.message.value,
+      })
+      .then(function(response) {
+        statusDiv.style.color = 'green';
+        statusDiv.textContent = 'Message sent! We will get back to you soon.';
+        form.reset();
+        setTimeout(() => { emailModal.style.display = 'none'; }, 1400);
+      }, function(error) {
+        statusDiv.style.color = 'red';
+        statusDiv.textContent = 'Failed to send. Please try again or email directly at axentra.cx@gmail.com';
+        console.error('EmailJS error:', error);
+      });
+    });
+
+    // Mobile dropdown behavior
     document.querySelectorAll('.dropdown > a').forEach(link => {
       link.addEventListener('click', (e) => {
         if (window.innerWidth < 992) {
